@@ -1,3 +1,4 @@
 ytconfig.lisp
 .cvsignore
 code.gbg
+*.dif
